Дисплей съехал, не понятно почему

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
+[env:esp01]
 platform = espressif8266
-board = d1_mini
+board = esp01
 framework = arduino
 
-board_build.f_cpu = 160000000L
+board_build.f_cpu = 80000000L
 board_build.f_flash = 80000000L
 
 
@@ -27,8 +27,11 @@ lib_deps =
 tools.esptool.network_cmd={runtime.tools.arduinoOTA.path}/bin/arduinoOTA
 tools.esptool.upload.network_pattern="{network_cmd}" -address {serial.port} -port 65280 -username arduino -password "{network.password}" -sketch "{build.path}/{build.project_name}.bin" -upload /sketch -b
 
-upload_protocol = espota
-upload_port = 192.168.0.106
-; upload_port = /dev/cu.usbserial-A50285BI
-upload_speed = 921600
+; upload_protocol = espota
+; upload_port = 192.168.88.235
+
+upload_port = /dev/cu.usbserial-A50285BI ; external
+; upload_port = /dev/cu.usbserial-1410 ; wemos d1r2 intrnal
+
+upload_speed = 115200 ; 921600
 monitor_speed = 115200
